--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>乐途旅行</title>
     {% load static %}
-    <link rel="stylesheet" href="../static/css/home/home.css">
-    <link rel="stylesheet" href="../static/css/basic.css">
+    <link rel="stylesheet" href="/static/css/home/home.css">
+    <link rel="stylesheet" href="/static/css/basic.css">
 </head>
-<script src="../static/js/jquery.js"></script>
-<script src="../static/js/home/home_banner.js"></script>
+<script src="/static/js/jquery.js"></script>
+<script src="/static/js/home/home_banner.js"></script>
 
 <body>
     <header id="header">
@@ -34,12 +34,12 @@
         
             <b>
                 <div id="register">
-                    <a href="user/register.html">免费注册</a>
+                    <a href="/user/register">免费注册</a>
                 </div>
             </b>
             <b>
                 <div id="login">
-                    <a href="user/login.html">您好,请登录</a>
+                    <a href="/user/login">您好,请登录</a>
                 </div>
             </b>
         </div>
@@ -242,11 +242,11 @@
             <div class="block center">
                 <h2>旅游 FAQ</h2>
                 <hr>
-                <p><a href="about/travelContract.html">旅游合同签订方式？</a></p>
-                <p><a href="about/childPrice.html">儿童价是基于什么制定的？</a></p>
-                <p><a href="about/touristRoute.html">旅游的线路品质怎么界定的？</a></p>
-                <p><a href="about/singleRoom.html">单房差是什么？</a></p>
-                <p><a href="about/travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
+                <p><a href="/about/travelContract">旅游合同签订方式？</a></p>
+                <p><a href="/about/childPrice">儿童价是基于什么制定的？</a></p>
+                <p><a href="/about/touristRoute">旅游的线路品质怎么界定的？</a></p>
+                <p><a href="/about/singleRoom">单房差是什么？</a></p>
+                <p><a href="/about/travelInsuranceCategory">旅游保险有那些种类？</a></p>
             </div>
             <div class="block right">
                 <h2>联系方式</h2>
