--- a/Travel/templates/scenic/ticket.html
+++ b/Travel/templates/scenic/ticket.html
@@ -141,7 +141,7 @@
                     <div class="gcount">
                         <!--阻止超链接默认事件-->
                         <a href="javascript:void(0)" class="minus">-</a>
-                        <input type="text" value="1" name='2'>
+                        <input type="text" value="1" name='a1' required>
                         <a href="javascript:void(0)" class="add">+</a>
                     </div>
                     <div class="gsum">￥80.00</div>
@@ -167,7 +167,7 @@
                         <!--阻止超链接默认事件-->
                         
                         <a href="javascript:void(0)" class="minus">-</a>
-                        <input type="text" value="1" name='2'>
+                        <input type="text" value="1" name='a2' required>
                         <a href="javascript:void(0)" class="add">+</a>
                     </div>
                     <div class="gsum">￥ 40.00</div>
