--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -31,7 +31,6 @@
         </div>
         {% else %}
         <div class="login">
-        
             <b>
                 <div id="register">
                     <a href="/user/register">免费注册</a>
@@ -44,16 +43,14 @@
             </b>
         </div>
         {% endif %}
-        
-        
         <div class="center">
             <h1 class="logo">
-                <a href="javascript:void(0)" id="logoA">乐途旅行网</a>
+                <a href="/user/index" id="logoA">乐途旅行网</a>
             </h1>
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li class="active"><a href="javascript:void(0)">首页</a></li>
+                    <li class="active"><a href="/user/index">首页</a></li>
                     <li><a href="/scenic">景点门票</a></li>
                     <li><a href="/trip">交通出行</a></li>
                     <li><a href="/hotel">酒店预定</a></li>
