--- a/Travel/templates/trip/order.html
+++ b/Travel/templates/trip/order.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>乐途旅行</title>
-    <link rel="stylesheet" href="../../static/css/about/information.css">
-    <link rel="stylesheet" href="../../static/css/basic.css">
-    <link rel="stylesheet" href="../../static/css/trip/order.css">
+    <link rel="stylesheet" href="/static/css/about/information.css">
+    <link rel="stylesheet" href="/static/css/basic.css">
+    <link rel="stylesheet" href="/static/css/trip/order.css">
     <!-- <script src="../js/Calendar.js"></script> -->
-    <script src="../../static/js/jquery.js"></script>
-    <script src="../../static/js/hotel/layDate-v5.0.9/laydate/laydate.js"></script> <!-- 改成你的路径 -->
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/hotel/layDate-v5.0.9/laydate/laydate.js"></script> <!-- 改成你的路径 -->
     <script>
         lay('#version').html('-v' + laydate.v);
 
@@ -30,16 +30,16 @@
     <header id="header">
         <div class="center">
             <h1 class="logo">
-                <a href="../index.html" id="logoA">乐途旅行网</a>
+                <a href="/user" id="logoA">乐途旅行网</a>
             </h1>
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li><a href="../index.html">首页</a></li>
-                    <li><a href="../scenic/information.html">景点门票</a></li>
-                    <li class="active"><a href="../trip/order.html">交通出行</a></li>
-                    <li><a href="../hotel/order_hotel.html">酒店预定</a></li>
-                    <li><a href="../about/about.html">关于我们</a></li>
+                    <li><a href="/user">首页</a></li>
+                    <li><a href="/scenic">景点门票</a></li>
+                    <li class="active"><a href="/trip">交通出行</a></li>
+                    <li><a href="/hotel">酒店预定</a></li>
+                    <li><a href="/about">关于我们</a></li>
                 </ul>
             </nav>
 
@@ -289,11 +289,11 @@
             <div class="block center">
                 <h2>旅游 FAQ</h2>
                 <hr>
-                <p><a href="../about/travelContract.html">旅游合同签订方式？</a></p>
-                <p><a href="../about/childPrice.html">儿童价是基于什么制定的？</a></p>
-                <p><a href="../about/touristRoute.html">旅游的线路品质怎么界定的？</a></p>
-                <p><a href="../about/singleRoom.html">单房差是什么？</a></p>
-                <p><a href="../about/travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
+                <p><a href="/about/travelContract">旅游合同签订方式？</a></p>
+                <p><a href="/about/childPrice">儿童价是基于什么制定的？</a></p>
+                <p><a href="/about/touristRoute">旅游的线路品质怎么界定的？</a></p>
+                <p><a href="/about/singleRoom">单房差是什么？</a></p>
+                <p><a href="/about/travelInsuranceCategory">旅游保险有那些种类？</a></p>
             </div>
             <div class="block right">
                 <h2>联系方式</h2>
@@ -307,7 +307,7 @@
         </div>
         <div class="bottom">
             <p>Copyright ©LT 乐途旅行网 | 陕ICP备120110109号 | 旅行网经营许可证： L-LT-BK12345</p>
-            <img src="../../static/images/home/pic.gif" title="站长统计">
+            <img src="/static/images/home/pic.gif" title="站长统计">
         </div>
     </footer>
 </body>
