--- a/Travel/templates/about/childPrice.html
+++ b/Travel/templates/about/childPrice.html
@@ -15,15 +15,15 @@
     <header id="header">
         <div class="center">
             <h1 class="logo">
-                <a href="/user/index" id="logoA">乐途旅行网</a>
+                <a href="/user" id="logoA">乐途旅行网</a>
             </h1>
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li><a href="/user/index">首页</a></li>
-                    <li><a href="../html/information.html">景点门票</a></li>
-                    <li><a href="../html/order.html">交通出行</a></li>
-                    <li><a href="../html/order_hotel.html">酒店预定</a></li>
+                    <li><a href="/user">首页</a></li>
+                    <li><a href="/scenic">景点门票</a></li>
+                    <li><a href="/trip">交通出行</a></li>
+                    <li><a href="/hotel">酒店预定</a></li>
                     <li class="active"><a href="/about">关于我们</a></li>
                 </ul>
             </nav>
