--- a/Travel/templates/user/cart.html
+++ b/Travel/templates/user/cart.html
@@ -24,17 +24,17 @@
         </div>
         <div class="center">
             <h1 class="logo">
-                <a href="../index.html" id="logoA">乐途旅行网</a>
+                <a href="/uesr" id="logoA">乐途旅行网</a>
             </h1>
             
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li class="active"><a href="../index.html">首页</a></li>
-                    <li><a href="information.html">景点门票</a></li>
-                    <li><a href="order.html">交通出行</a></li>
-                    <li><a href="order_hotel.html">酒店预定</a></li>
-                    <li><a href="about.html">关于我们</a></li>
+                    <li class="active"><a href="/user">首页</a></li>
+                    <li><a href="/scenic">景点门票</a></li>
+                    <li><a href="/trip">交通出行</a></li>
+                    <li><a href="/hotel">酒店预定</a></li>
+                    <li><a href="/about">关于我们</a></li>
                 </ul>
             </nav>
             
