--- a/Travel/templates/user/register.html
+++ b/Travel/templates/user/register.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div id="top">
-        <a href="index">
+        <a href="/user">
             <img src="/static/images/user/logo.png" alt="logo">
         </a>
         <span>免费注册</span>
-        <a href="index"><span class="s1">返回首页</span></a>
+        <a href="/user"><span class="s1">返回首页</span></a>
     </div>
     <div id="mian">
-        <form action="/index" method="post">
+        <form action="/user" method="post">
             <div class="content">
                 <p>
                     注册
@@ -42,7 +42,7 @@
         </form>
     </div>
     <div id="bottom">
-        <a href="index">
+        <a href="/user">
             <img src="/static/images/user/logo.png" alt="logo" id="logoImg">
         </a>
         <p>
