增加登录功能

--- a/Travel/templates/user/login.html
+++ b/Travel/templates/user/login.html
@@ -17,7 +17,7 @@
         <a href="/user"><span class="s1">返回首页</span></a>
     </div>
     <div id="mian">
-        <form action="" method="post">
+        <form action="/user/login" method="post">
             <div class="content">
                 <p>
                     登录
