--- a/Travel/templates/hotel/hotel_ticket.html
+++ b/Travel/templates/hotel/hotel_ticket.html
@@ -24,10 +24,10 @@
                 <div id="cart"><a href="">我的订单</a></div>
             </b>
             <b>
-                <div id="register"><a href="../user/register.html">免费注册</a></div>
+                <div id="register"><a href="/user/register">免费注册</a></div>
             </b>
             <b>
-                <div id="login"><a href="../user/login.html">您好,请登录</a></div>
+                <div id="login"><a href="/user/login">您好,请登录</a></div>
             </b>
         </div>
         <div class="center">
@@ -38,11 +38,11 @@
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li><a href="../index.html">首页</a></li>
-                    <li><a href="../scenic/information.html">景点门票</a></li>
-                    <li><a href="../about/order.html">交通出行</a></li>
-                    <li class="active"><a href="order_hotel.html">酒店预定</a></li>
-                    <li><a href="../about/about.html">关于我们</a></li>
+                    <li><a href="/index.html">首页</a></li>
+                    <li><a href="/scenic/">景点门票</a></li>
+                    <li><a href="/trip/">交通出行</a></li>
+                    <li class="active"><a href="/hotel/">酒店预定</a></li>
+                    <li><a href="/about/">关于我们</a></li>
                 </ul>
             </nav>
         </div>
@@ -99,7 +99,7 @@
     <div id="bodytickrt">
         <div class=daohang style="background:orange;">
             <a href="##">房间订购</a>
-            <a href="../scenic/information.html">周围景点</a>
+            <a href="/scenic/information">周围景点</a>
         </div>
 
         <div class=count>
@@ -264,11 +264,11 @@
             <div class="block center">
                 <h2>旅游 FAQ</h2>
                 <hr>
-                <p><a href="../about/travelContract.html">旅游合同签订方式？</a></p>
-                <p><a href="../about/childPrice.html">儿童价是基于什么制定的？</a></p>
-                <p><a href="../about/touristRoute.html">旅游的线路品质怎么界定的？</a></p>
-                <p><a href="../about/singleRoom.html">单房差是什么？</a></p>
-                <p><a href="../about/travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
+                <p><a href="/about/travelContract">旅游合同签订方式？</a></p>
+                <p><a href="/about/childPrice">儿童价是基于什么制定的？</a></p>
+                <p><a href="/about/touristRoute">旅游的线路品质怎么界定的？</a></p>
+                <p><a href="/about/singleRoom">单房差是什么？</a></p>
+                <p><a href="/about/travelInsuranceCategory">旅游保险有那些种类？</a></p>
             </div>
             <div class="block right">
                 <h2>联系方式</h2>
