--- a/Travel/templates/hotel/order_hotel.html
+++ b/Travel/templates/hotel/order_hotel.html
@@ -32,11 +32,11 @@
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li><a href="../index.html">首页</a></li>
-                    <li><a href="../scenic/information.html">景点门票</a></li>
-                    <li><a href="./order.html">交通出行</a></li>
-                    <li class="active"><a href="./order_hotel.html">酒店预定</a></li>
-                    <li><a href="../about/about.html">关于我们</a></li>
+                    <li><a href="/index.html">首页</a></li>
+                    <li><a href="/scenic/">景点门票</a></li>
+                    <li><a href="/trip/">交通出行</a></li>
+                    <li class="active"><a href="/hotel/">酒店预定</a></li>
+                    <li><a href="/about/">关于我们</a></li>
                 </ul>
             </nav>
 
@@ -219,7 +219,7 @@
                     <figure class="hotel_figure">
                         <img src="../../static/images/hotel/3star_hotel/1fulixierdun/11.jpg" alt="The Pulpit Rock" class="hotel_img">
                         <span class="hotel_name">富力希尔顿</span>酒店 星级酒店
-                        <a href="http://localhost:8000/hotel/31">点击进入</a>
+                        <a href="/hotel/31">点击进入</a>
                     </figure>
                     <figure class="hotel_figure">
                         <img src="../../static/images/hotel/1quick_hotel/3jingjiangzhixing/11.jpg" alt="The Pulpit Rock" class="hotel_img"><span
@@ -255,68 +255,68 @@
             </div>
             <div class="brandListBox">
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/xed.jpg">
+                    <img src="../../static/images/hotel/hotel_brand/xed.jpg" alt="">
                     希尔顿
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/biguiyuan.jpg">碧桂园
+                    <img src="../../static/images/hotel/hotel_brand/biguiyuan.jpg" alt="">碧桂园
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/hengdajiudian.png">恒大酒店
+                    <img src="../../static/images/hotel/hotel_brand/hengdajiudian.png" alt="">恒大酒店
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/jinghan.jpg">均含酒店
+                    <img src="../../static/images/hotel/hotel_brand/jinghan.jpg" alt="">均含酒店
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/kaiyuanmingdu.jpg">开元酒店集团
+                    <img src="../../static/images/hotel/hotel_brand/kaiyuanmingdu.jpg" alt="">开元酒店集团
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/weiyena.jpg">维也纳酒店
+                    <img src="../../static/images/hotel/hotel_brand/weiyena.jpg" alt="">维也纳酒店
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/xianggelila.jpg">香格里拉
+                    <img src="../../static/images/hotel/hotel_brand/xianggelila.jpg" alt="">香格里拉
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/huazhu.png">华住酒店集团
+                    <img src="../../static/images/hotel/hotel_brand/huazhu.png" alt="">华住酒店集团
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/jinjiang.png">锦江酒店
+                    <img src="../../static/images/hotel/hotel_brand/jinjiang.png" alt="">锦江酒店
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/wj.jpg">维京酒店集团
+                    <img src="../../static/images/hotel/hotel_brand/wj.jpg" alt="">维京酒店集团
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/botaojituan.jpg">铂涛集团
+                    <img src="../../static/images/hotel/hotel_brand/botaojituan.jpg" alt="">铂涛集团
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/chengshimingren.jpg">城市名人
+                    <img src="../../static/images/hotel/hotel_brand/chengshimingren.jpg" alt="">城市名人
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/chengshibianjie.jpg">城市便捷
+                    <img src="../../static/images/hotel/hotel_brand/chengshibianjie.jpg" alt="">城市便捷
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/dazhonghua.jpg">大中华集团
+                    <img src="../../static/images/hotel/hotel_brand/dazhonghua.jpg" alt="">大中华集团
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/haihang.jpg">海航集团
+                    <img src="../../static/images/hotel/hotel_brand/haihang.jpg" alt="">海航集团
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/huajiantang.jpg">花间堂
+                    <img src="../../static/images/hotel/hotel_brand/huajiantang.jpg" alt="">花间堂
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/jinlinliansuo.jpg">金陵连锁
+                    <img src="../../static/images/hotel/hotel_brand/jinlinliansuo.jpg" alt="">金陵连锁
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/shuxiangliansuo.png">书香连锁酒店
+                    <img src="../../static/images/hotel/hotel_brand/shuxiangliansuo.png" alt="">书香连锁酒店
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/wanhao.jpg">万豪团
+                    <img src="../../static/images/hotel/hotel_brand/wanhao.jpg" alt="">万豪团
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/yinju.jpg">隐居
+                    <img src="../../static/images/hotel/hotel_brand/yinju.jpg" alt="">隐居
                 </a>
                 <a class="brandList">
-                    <img src="../../static/images/hotel/hotel_brand/yuehai.jpg">粤海集团
+                    <img src="../../static/images/hotel/hotel_brand/yuehai.jpg" alt="">粤海集团
                 </a>
             </div>
             <div class="more">加载更多...</div>
@@ -335,11 +335,11 @@
             <div class="block center">
                 <h2>旅游 FAQ</h2>
                 <hr>
-                <p><a href="../about/travelContract.html">旅游合同签订方式？</a></p>
-                <p><a href="../about/childPrice.html">儿童价是基于什么制定的？</a></p>
-                <p><a href="../about/touristRoute.html">旅游的线路品质怎么界定的？</a></p>
-                <p><a href="../about/singleRoom.html">单房差是什么？</a></p>
-                <p><a href="../about/travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
+                <p><a href="/about/travelContract">旅游合同签订方式？</a></p>
+                <p><a href="/about/childPrice">儿童价是基于什么制定的？</a></p>
+                <p><a href="/about/touristRoute">旅游的线路品质怎么界定的？</a></p>
+                <p><a href="/about/singleRoom">单房差是什么？</a></p>
+                <p><a href="/about/travelInsuranceCategory">旅游保险有那些种类？</a></p>
             </div>
             <div class="block right">
                 <h2>联系方式</h2>
