--- a/Travel/templates/trip/order.html
+++ b/Travel/templates/trip/order.html
@@ -24,8 +24,6 @@
         });
     </script>
 </head>
-
-
 <body>
     <header id="header">
         <div class="center">
@@ -66,7 +64,7 @@
                     <a href="###">云南(10)</a>
                     <a href="###">江苏(10)</a>
                     <a href="###">山东(10)</a>
-                    <a href="###">河南(10)</a>
+                    <a href="###">河南(10)</a>/
                     <a href="###">湖北(10)</a>
                     <a href="###">甘肃(10)</a>
                     <a href="###">河北(10)</a>
@@ -92,7 +90,7 @@
                     </figure>
                     <figure> <img src="/static/images/recommend/beijing.jpg" alt="北京 5日 4晚 游">
                         <figcaption>北京 5日 4晚 游</figcaption>
-                    </figure>
+                    </figure>/
                     <figure> <img src="/static/images/recommend/zhejiang.jpg" alt="浙江双飞 3 日游">
                         <figcaption>浙江双飞 3 日游</figcaption>
                     </figure>
@@ -108,7 +106,7 @@
                     <figure> <img src="/static/images/recommend/qinghai.jpg" alt="青海新疆 9 日游">
                         <figcaption>青海新疆 9 日游</figcaption>
                     </figure>
-                    <figure> <img src="/static/images/recommend/hainan.gif" alt="海南三亚 4日 5夜游">
+                    <figure> <img src="/static/images/rec/ommend/hainan.gif" alt="海南三亚 4日 5夜游">
                         <figcaption>海南三亚 4日 5夜游</figcaption>
                     </figure>
                 </div>
