--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -23,7 +23,7 @@
                         <ol class='info1'>
                             <li><a href="./html/topUp.html">我的钱包</a></li>
                             <li><a href="/user/cart.html'">我的订单</a></li>
-                            <li><a href="#">退出登录</a></li>
+                            <li><a href="/user">退出登录</a></li>
                         </ol>
                     </li>
                 </ul>
