--- a/Travel/templates/trip/order.html
+++ b/Travel/templates/trip/order.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/about/information.css">
     <link rel="stylesheet" href="/static/css/basic.css">
     <link rel="stylesheet" href="/static/css/trip/order.css">
+    <link rel="stylesheet" href="/static/css/trip/new_order.css">
     <!-- <script src="../js/Calendar.js"></script> -->
     <script src="/static/js/jquery.js"></script>
     <script src="/static/js/hotel/layDate-v5.0.9/laydate/laydate.js"></script> <!-- 改成你的路径 -->
@@ -91,7 +92,6 @@
                 <figure><img src="/static/images/recommend/beijing.jpg" alt="北京 5日 4晚 游">
                     <figcaption>北京 5日 4晚 游</figcaption>
                 </figure>
-                /
                 <figure><img src="/static/images/recommend/zhejiang.jpg" alt="浙江双飞 3 日游">
                     <figcaption>浙江双飞 3 日游</figcaption>
                 </figure>
@@ -107,7 +107,7 @@
                 <figure><img src="/static/images/recommend/qinghai.jpg" alt="青海新疆 9 日游">
                     <figcaption>青海新疆 9 日游</figcaption>
                 </figure>
-                <figure><img src="/static/images/rec/ommend/hainan.gif" alt="海南三亚 4日 5夜游">
+                <figure><img src="/static/images/recommend/hainan.gif" alt="海南三亚 4日 5夜游">
                     <figcaption>海南三亚 4日 5夜游</figcaption>
                 </figure>
             </div>
@@ -174,103 +174,140 @@
                 <li>南京</li>
             </ul>
             <form action="">
+                {#                <table>#}
+                {#                    <thead>#}
+                {#                    <tr>#}
+                {#                        <th>路线</th>#}
+                {#                        <th>日期</th>#}
+                {#                        <th>价格</th>#}
+                {#                        <th>税费</th>#}
+                {#                        <th>餐食</th>#}
+                {#                        <th>航班</th>#}
+                {#                        <th>预定</th>#}
+                {#                        旅游#}
+                {#                    </tr>#}
+                {#                    </thead>#}
+                {#                    <tbody>#}
+                {#                    <tr>#}
+                {#                        <td>北京-成都</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥745</td>#}
+                {#                        <td>¥50</td>#}
+                {#                        <td>有</td>#}
+                {#                        <td>春秋航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    <tr>#}
+                {#                        <td>北京-上海</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥479</td>#}
+                {#                        <td>¥45</td>#}
+                {#                        <td>无</td>#}
+                {#                        <td>南方航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    <tr>#}
+                {#                        <td>北京-深圳</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥561</td>#}
+                {#                        <td>¥52</td>#}
+                {#                        <td>有</td>#}
+                {#                        <td>西部航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    <tr>#}
+                {#                        <td>北京-杭州</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥378</td>#}
+                {#                        <td>¥36</td>#}
+                {#                        <td>无</td>#}
+                {#                        <td>天津航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    <tr>#}
+                {#                        <td>北京-广州</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥612</td>#}
+                {#                        <td>¥44</td>#}
+                {#                        <td>有</td>#}
+                {#                        <td>首都航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    <tr>#}
+                {#                        <td>北京-重庆</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥428</td>#}
+                {#                        <td>¥62</td>#}
+                {#                        <td>有</td>#}
+                {#                        <td>东方航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    <tr>#}
+                {#                        <td>北京-昆明</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥509</td>#}
+                {#                        <td>¥35</td>#}
+                {#                        <td>无</td>#}
+                {#                        <td>厦门航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    <tr>#}
+                {#                        <td>北京-厦门</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥893</td>#}
+                {#                        <td>¥73</td>#}
+                {#                        <td>有</td>#}
+                {#                        <td>深圳航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    <tr>#}
+                {#                        <td>北京-长沙</td>#}
+                {#                        <td>10-15</td>#}
+                {#                        <td class="price">¥663</td>#}
+                {#                        <td>¥46</td>#}
+                {#                        <td>无</td>#}
+                {#                        <td>四川航空</td>#}
+                {#                        <td><a href="###" class="reserve">预定</a></td>#}
+                {#                    </tr>#}
+                {#                    </tbody>#}
+                {##}
+                {#                </table>#}
                 <table>
                     <thead>
-                    <tr>
-                        <th>路线</th>
-                        <th>日期</th>
-                        <th>价格</th>
-                        <th>税费</th>
-                        <th>餐食</th>
-                        <th>航班</th>
-                        <th>预定</th>
-                        旅游
+                    <tr class="th" id="float">
+                        <th width="90" colspan="1" rowspan="1">车次</th>
+                        <th width="100" colspan="1" rowspan="1">出发站<br clear="none">
+                            到达站
+                        </th>
+                        <th width="82" colspan="1" rowspan="1" id="startendtime"><span class="b1" id="s_time"
+                                                                                       style="cursor: pointer;">出发时间</span><br><span
+                                class="b2" id="r_time" style="cursor: pointer;">到达时间</span></th>
+                        <th width="82" colspan="1" rowspan="1"><span class="b3" id="l_s"
+                                                                     style="cursor: pointer;">历时</span>
+                        </th>
+                        <th width="66" colspan="1" rowspan="1">商务座<br clear="none">
+                            特等座
+                        </th>
+                        <th width="66" colspan="1" rowspan="1">一等座</th>
+                        <th width="66" colspan="1" rowspan="1">二等座</th>
+                        <th width="66" colspan="1" rowspan="1">高级<br clear="none">
+                            软卧
+                        </th>
+                        <th width="66" colspan="1" rowspan="1">软卧<br clear="none">
+                            一等卧
+                        </th>
+                        <th width="66" colspan="1" rowspan="1">动卧</th>
+                        <th width="66" colspan="1" rowspan="1">硬卧<br clear="none">
+                            二等卧
+                        </th>
+                        <th width="66" colspan="1" rowspan="1">软座</th>
+                        <th width="66" colspan="1" rowspan="1">硬座</th>
+                        <th width="66" colspan="1" rowspan="1">无座</th>
+                        <th width="66" colspan="1" rowspan="1">其他</th>
+                        <th class="last" colspan="1" rowspan="1">备注</th>
                     </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>北京-成都</td>
-                        <td>10-15</td>
-                        <td class="price">¥745</td>
-                        <td>¥50</td>
-                        <td>有</td>
-                        <td>春秋航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
-                    <tr>
-                        <td>北京-上海</td>
-                        <td>10-15</td>
-                        <td class="price">¥479</td>
-                        <td>¥45</td>
-                        <td>无</td>
-                        <td>南方航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
-                    <tr>
-                        <td>北京-深圳</td>
-                        <td>10-15</td>
-                        <td class="price">¥561</td>
-                        <td>¥52</td>
-                        <td>有</td>
-                        <td>西部航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
-                    <tr>
-                        <td>北京-杭州</td>
-                        <td>10-15</td>
-                        <td class="price">¥378</td>
-                        <td>¥36</td>
-                        <td>无</td>
-                        <td>天津航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
-                    <tr>
-                        <td>北京-广州</td>
-                        <td>10-15</td>
-                        <td class="price">¥612</td>
-                        <td>¥44</td>
-                        <td>有</td>
-                        <td>首都航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
-                    <tr>
-                        <td>北京-重庆</td>
-                        <td>10-15</td>
-                        <td class="price">¥428</td>
-                        <td>¥62</td>
-                        <td>有</td>
-                        <td>东方航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
-                    <tr>
-                        <td>北京-昆明</td>
-                        <td>10-15</td>
-                        <td class="price">¥509</td>
-                        <td>¥35</td>
-                        <td>无</td>
-                        <td>厦门航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
-                    <tr>
-                        <td>北京-厦门</td>
-                        <td>10-15</td>
-                        <td class="price">¥893</td>
-                        <td>¥73</td>
-                        <td>有</td>
-                        <td>深圳航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
-                    <tr>
-                        <td>北京-长沙</td>
-                        <td>10-15</td>
-                        <td class="price">¥663</td>
-                        <td>¥46</td>
-                        <td>无</td>
-                        <td>四川航空</td>
-                        <td><a href="###" class="reserve">预定</a></td>
-                    </tr>
+                    <tbody id="queryLeftTable">
                     </tbody>
-
                 </table>
             </form>
         </div>
