--- a/Travel/static/css/trip/new_order.css
+++ b/Travel/static/css/trip/new_order.css
@@ -1,7 +1,3 @@
-/*.t-list table {*/
-/*    width: 100%;*/
-/*    table-layout: fixed;*/
-/*    word-wrap: break-word;*/
-/*    !*background: url(../images/bg_tlisthd.png) top repeat-x;*!*/
-/*    margin-top: 0;*/
-/*}*/
+tr th{
+    width:90px ;
+}
