--- a/Travel/templates/scenic/information.html
+++ b/Travel/templates/scenic/information.html
@@ -21,8 +21,8 @@
                 <ul>
                     <li class="home"><a href="javascript:void(0)">欢迎您,{{ uname }}</a>
                         <ol class='info1'>
-                            <li><a href="./html/topUp.html">我的钱包</a></li>
-                            <li><a href="/user/cart.html'">我的订单</a></li>
+                            <li><a href="/user/topUp">我的钱包</a></li>
+                            <li><a href="/user/cart">我的订单</a></li>
                             <li><a href="/user">退出登录</a></li>
                         </ol>
                     </li>
@@ -45,12 +45,12 @@
         {% endif %}
         <div class="center">
             <h1 class="logo">
-                <a href="../index.html" id="logoA">乐途旅行网</a>
+                <a href="../index" id="logoA">乐途旅行网</a>
             </h1>
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li><a href="/">首页</a></li>
+                    <li><a href="/user">首页</a></li>
                     <li class="active"><a href="/scenic">景点门票</a></li>
                     <li><a href="/trip">交通出行</a></li>
                     <li><a href="/hotel">酒店预定</a></li>
@@ -60,6 +60,7 @@
 
         </div>
     </header>
+    {% load static %}
     <div id="headline" style="background-image:url({% static 'images/scenic/information2/headline.jpg' %})">
         <div class="center">
             <hgroup>
@@ -380,7 +381,7 @@
                     </article>
                     <div class="buy">
                         <div class="price">￥<strong>60起</strong><s>￥７０</s></div>
-                        <!--<div class="reserve"><a href="ticket.html">立即抢购</a></div>-->
+                        <!--<div class="reserve"><a href="ticket">立即抢购</a></div>-->
                         <div class="reserve"><a href="/scenic/ticket">立即抢购</a></div>
 
                     </div>
