--- a/Travel/templates/about/travelContract.html
+++ b/Travel/templates/about/travelContract.html
@@ -20,8 +20,8 @@
                 <ul>
                     <li class="home"><a href="javascript:void(0)">欢迎您,{{ uname }}</a>
                         <ol class='info1'>
-                            <li><a href="./html/topUp.html">我的钱包</a></li>
-                            <li><a href="/user/cart.html'">我的订单</a></li>
+                            <li><a href="/user/topUp">我的钱包</a></li>
+                            <li><a href="/user/cart">我的订单</a></li>
                             <li><a href="/user">退出登录</a></li>
                         </ol>
                     </li>
