--- a/Travel/templates/scenic/ticket.html
+++ b/Travel/templates/scenic/ticket.html
@@ -26,8 +26,8 @@
                 <ul>
                     <li class="home"><a href="javascript:void(0)">欢迎您,{{ uname }}</a>
                         <ol class='info1'>
-                            <li><a href="./html/topUp.html">我的钱包</a></li>
-                            <li><a href="/user/cart.html'">我的订单</a></li>
+                            <li><a href="/user/topUp">我的钱包</a></li>
+                            <li><a href="/user/cart">我的订单</a></li>
                             <li><a href="/user">退出登录</a></li>
                         </ol>
                     </li>
@@ -50,7 +50,7 @@
         {% endif %}
         <div class="center">
             <h1 class="logo">
-                <a href="index.html" id="logoA">乐途旅行网</a>
+                <a href="/user" id="logoA">乐途旅行网</a>
             </h1>
 
             <nav>
