--- a/Travel/templates/trip/order.html
+++ b/Travel/templates/trip/order.html
@@ -13,7 +13,7 @@
     <script src="/static/js/jquery.js"></script>
     <script src="/static/js/hotel/layDate-v5.0.9/laydate/laydate.js"></script> <!-- 改成你的路径 -->
     <script>
-        lay('#version').html('-v' + laydate.v);
+        lay('#version')('-v' + laydate.v);
 
         //执行一个laydate实例
         laydate.render({
@@ -32,8 +32,8 @@
             <ul>
                 <li class="home"><a href="javascript:void(0)">欢迎您,{{ uname }}</a>
                     <ol class='info1'>
-                        <li><a href="./html/topUp.html">我的钱包</a></li>
-                        <li><a href="/user/cart.html'">我的订单</a></li>
+                        <li><a href="/user/topUp">我的钱包</a></li>
+                        <li><a href="/user/cart">我的订单</a></li>
                         <li><a href="/user">退出登录</a></li>
                     </ol>
                 </li>
