--- a/Travel/static/css/user/cart.css
+++ b/Travel/static/css/user/cart.css
@@ -230,3 +230,57 @@
     color: #ccc;
     text-align: center;
 }
+
+
+
+/*历史订单*/
+.ocheck{
+    width: 8%;
+    background-color: #f1f3f4;
+}
+.oname{
+    width: 31%;
+    background-color: #f1f3f4;
+}
+.oprice{
+    width: 14%;
+    background-color: #f1f3f4;
+}
+.ocount{
+    width: 11%;
+    background-color: #f1f3f4;
+}
+.osum{
+    width: 11%;
+    background-color: #f1f3f4;
+}
+.otime{
+    width: 12%;
+    background-color: #f1f3f4;
+}
+.oaction{
+    width: 13%;
+    background-color: #f1f3f4;
+}
+/*调整垂直居中*/
+.item .ocheck,.item .oaction,.item .osum,.item .ocount,.item .otime{
+    line-height: 115px;
+}
+.item .oname{
+    text-align: left;
+}
+.item .oname img{
+    width: 84px;
+    height: 84px;
+    float: left; 
+    margin-left: 20%;
+    margin-right: 20px;
+    margin-top: 15px;
+}
+.item .oname p:nth-child(2){
+    margin-top: 13px;
+    margin-bottom: 8px; 
+}
+.item .oname p:nth-child(3){
+    margin-bottom: 8px; 
+}
