--- a/Travel/static/css/scenic/ticket.css
+++ b/Travel/static/css/scenic/ticket.css
@@ -204,11 +204,13 @@
 }
 .gor{
     width:130px;
+
 }
-.gor a{
+
+/* .gor a{
     display:inline-block;
     background:crimson;
-    width:60px;
+    width:80px;
     height:30px;
     color: #000;
     border-radius: 5px;
@@ -217,12 +219,13 @@
 }
 .gor a:hover{
     color: white;
-}
+} */
+
 
 /*全选按钮的垂直对齐*/
-.checkAll{
+/* .checkAll{
 	vertical-align:middle;
-}
+} */
 /* .conten{
     margin-top:20px;
 ｝ */
@@ -247,10 +250,10 @@
 	color:#333;
 	line-height:26px;
 	font-size:16px;
-	/* margin-top:40px; */
+
 }
 .gcount input{
-	/* margin-top:40px; */
+
 	float:left;
 	border:1px solid gray;
 	border-left:0;
