--- a/Travel/templates/user/order.html
+++ b/Travel/templates/user/order.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     {% extends 'user/cart.html' %}
+    {% block lab %}
+    <div id="cart"></div>
+    {% endblock lab %}
     {% block order%}
     <div id="main">
         <!--购物车顶部标签-->
