--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -23,7 +23,7 @@
                         <ol class='info1'>
                             <li><a href="/user/topUp">我的钱包</a></li>
                             <li><a href="/user/cart">我的订单</a></li>
-                            <li><a href="">历史订单</a></li>
+                            <li><a href="/user/order">历史订单</a></li>
                             <li><a href="/user">退出登录</a></li>
                         </ol>
                     </li>
@@ -135,9 +135,9 @@
         <a href="">
             <img src="../static/images/home/tour3.jpg" alt="热门旅游">
         </a>
-        <figcaption><strong class="title">&lt;大明宫 &gt;</strong> 大明宫，大唐帝国的大朝正宫，唐朝的政治中心和
-            国家象征 。始建于唐太宗贞观八年（634年），原名永安宫，是唐长安城三座主要宫殿“三大内”（大明宫、太极宫、
-            兴庆宫）中规模最大的一座，称为“东内”。
+        <figcaption><strong class="title">&lt;大明宫 &gt;</strong> 
+            大明宫，大唐帝国的大朝正宫，唐朝的政治中心和国家象征 。始建于唐太宗贞观八年（634年），原名永安宫，
+            是唐长安城三座主要宫殿“三大内”（大明宫、太极宫、兴庆宫）中规模最大的一座，称为“东内”。
         </figcaption>
         <div>
             <em class="sat">满意度77%</em>
