--- a/Travel/static/css/trip/new_order.css
+++ b/Travel/static/css/trip/new_order.css
@@ -1,3 +1,16 @@
 tr th{
     width:90px ;
 }
+#detail td{
+    text-align: center;
+    font-size: 15px;
+}
+#tab{
+    font-size: 13px;
+}
+#tab .th{
+    background: bisque;
+}
+/*#query #detail td{*/
+/*    font-size: 15px;*/
+/*}*/
