--- a/Travel/templates/trip/new_order.html
+++ b/Travel/templates/trip/new_order.html
@@ -137,18 +137,18 @@
                 <div class="left">
                     <p>
                         <label for="from_city">出发城市</label>
-                        <input type="text" name="from_city">
+                        <input type="text" name="from_city" placeholder="{{ from_station }}">
                         <label for="to_city">到达城市</label>
-                        <input type="text" name="to_city">
+                        <input type="text" name="to_city" placeholder="{{ to_station }}">
                     </p>
 
                 </div>
                 <div class="center">
                     <p>
                         <label for="from_day">出发时间</label>
-                        <input type="text" name="from_day" class="demo-input" placeholder="请选择日期" id="from_date">
-                        <label for="to_day">返回时间</label>
-                        <input type="text" name="to_day" class="demo-input" placeholder="请选择日期" id="to_date">
+                        <input type="text" name="from_day" class="demo-input" placeholder="{{ from_date }}" id="from_date">
+                        <label for="to_day">到达时间</label>
+                        <input type="text" name="to_day" class="demo-input" placeholder="{{ to_date }}" id="to_date">
                     </p>
 
                 </div>
@@ -210,40 +210,53 @@
                     </tr>
                     </thead>
 
-{#                    <tbody id="queryLeftTable">#}
-{#                    <tr class="th1" id="detail">#}
-{#                        <td width="90" colspan="1" rowspan="1">车次</td>#}
-{#                        <td width="100" colspan="1" rowspan="1">出发站<br clear="none">#}
-{#                            到达站#}
-{#                        </td>#}
-{#                        <td width="82" colspan="1" rowspan="1" id="startendtime"><span class="b1" id="s_time"#}
-{#                                                                                       style="cursor: pointer;">出发时间</span><br><span#}
-{#                                class="b2" id="r_time" style="cursor: pointer;">到达时间</span></td>#}
-{#                        <td width="82" colspan="1" rowspan="1"><span class="b3" id="l_s"#}
-{#                                                                     style="cursor: pointer;">历时</span>#}
-{#                        </td>#}
-{#                        <td width="66" colspan="1" rowspan="1">商务座<br clear="none">#}
-{#                            特等座#}
-{#                        </td>#}
-{#                        <td width="66" colspan="1" rowspan="1">一等座</td>#}
-{#                        <td width="66" colspan="1" rowspan="1">二等座</td>#}
-{#                        <td width="66" colspan="1" rowspan="1">高级<br clear="none">#}
-{#                            软卧#}
-{#                        </td>#}
-{#                        <td width="66" colspan="1" rowspan="1">软卧<br clear="none">#}
-{#                            一等卧#}
-{#                        </td>#}
-{#                        <td width="66" colspan="1" rowspan="1">动卧</td>#}
-{#                        <td width="66" colspan="1" rowspan="1">硬卧<br clear="none">#}
-{#                            二等卧#}
-{#                        </td>#}
-{#                        <td width="66" colspan="1" rowspan="1">软座</td>#}
-{#                        <td width="66" colspan="1" rowspan="1">硬座</td>#}
-{#                        <td width="66" colspan="1" rowspan="1">无座</td>#}
-{#                        <td width="66" colspan="1" rowspan="1">其他</td>#}
-{#                        <td class="last" colspan="1" rowspan="1">备注</td>#}
-{#                    </tr>#}
-{#                    </tbody>#}
+                    <tbody id="query">
+                    {% for foo in data %}
+                        {% for f in data.foo %}
+                        <tr class="th1" id="detail">
+                            <td width="90" colspan="1" rowspan="1">{{ f.0 }}</td>
+                            <td width="100" colspan="1" rowspan="1">{{f.1 }}<br clear="none">
+                                {{ f.2 }}
+                            </td>
+                        </tr>
+                        {% endfor %}
+
+{#                        <tr class="th1" id="detail">#}
+{#                            <td width="90" colspan="1" rowspan="1">{{ foo }}</td>#}
+{#                            <td width="100" colspan="1" rowspan="1">{{ data.foo.1 }}<br clear="none">#}
+{#                                {{ data.foo.2 }}#}
+{#                            </td>#}
+{#                            <td width="82" colspan="1" rowspan="1" id="startendtime"><span class="b1" id="s_time"#}
+{#                                                                                           style="cursor: pointer;">{{ foo[start_time] }}</span><br><span#}
+{#                                    class="b2" id="r_time" style="cursor: pointer;">{{ foo[arrive_time] }}</span></td>#}
+{#                            <td width="82" colspan="1" rowspan="1"><span class="b3" id="l_s"#}
+{#                                                                         style="cursor: pointer;">{{ foo[lishi] }}</span>#}
+{#                            </td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ foo[swz_num] }}<br clear="none">#}
+{#                                {{ foo[zy_num] }}#}
+{#                            </td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ foo[ze_num] }}</td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][7] }}</td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][8] }}<br clear="none">#}
+{#                                {{ data[foo][9] }}#}
+{#                            </td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][10] }}<br clear="none">#}
+{#                                {{ data[foo][11] }}#}
+{#                            </td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][12] }}</td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][13] }}<br clear="none">#}
+{#                                {{ data[foo][14] }}#}
+{#                            </td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][15] }}</td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][16] }}</td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][17] }}</td>#}
+{#                            <td width="66" colspan="1" rowspan="1">{{ data[foo][18] }}</td>#}
+{#                            <td class="last" colspan="1" rowspan="1">预定</td>#}
+{#                        </tr>#}
+                    {% endfor %}
+
+
+                    </tbody>
                 </table>
             </form>
         </div>
